[gd_scene load_steps=90 format=2]

[ext_resource path="res://sprites/Pickups/Collectables/light_capsules/spr_item_dr_light_capsule.png" type="Texture" id=1]
[ext_resource path="res://scripts/entity/Item/Item_Dr_light_capsule.gd" type="Script" id=2]
[ext_resource path="res://sprites/Pickups/Collectables/light_capsules/transition_image.png" type="Texture" id=3]
[ext_resource path="res://sprites/Pickups/Collectables/light_capsules/spr_item_dr_light_capsule_hologram.png" type="Texture" id=4]
[ext_resource path="res://sprites/Pickups/Collectables/light_capsules/spr_item_dr_light_capsule_armor_icons.png" type="Texture" id=5]
[ext_resource path="res://sprites/Particles/misc/spr_par_dr_light_beams.png" type="Texture" id=6]
[ext_resource path="res://sprites/Pickups/Collectables/light_capsules/spr_item_dr_light_capsule_cent_light.png" type="Texture" id=7]
[ext_resource path="res://sprites/Pickups/Collectables/light_capsules/spr_item_dr_light_capsule_side_light.png" type="Texture" id=8]
[ext_resource path="res://sprites/Pickups/Collectables/light_capsules/spr_item_dr_light_capsule_shine.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 42, 48 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 9 )
region = Rect2( 42, 0, 42, 48 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 9 )
region = Rect2( 126, 48, 42, 48 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 9 )
region = Rect2( 84, 48, 42, 48 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 9 )
region = Rect2( 42, 48, 42, 48 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 9 )
region = Rect2( 0, 48, 42, 48 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 9 )
region = Rect2( 84, 0, 42, 48 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 9 )
region = Rect2( 126, 0, 42, 48 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 42, 48 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 9 )
region = Rect2( 0, 96, 42, 48 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 9 )
region = Rect2( 42, 96, 42, 48 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 9 )
region = Rect2( 84, 96, 42, 48 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 9 )
region = Rect2( 126, 96, 42, 48 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 9 )
region = Rect2( 42, 144, 42, 48 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 9 )
region = Rect2( 0, 144, 42, 48 )

[sub_resource type="SpriteFrames" id=75]
animations = [ {
"frames": [ SubResource( 76 ), SubResource( 77 ) ],
"loop": true,
"name": "Blink",
"speed": 30.0
}, {
"frames": [ SubResource( 78 ), SubResource( 78 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 84 ), SubResource( 84 ), SubResource( 84 ), SubResource( 84 ), SubResource( 84 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 84 ) ],
"loop": false,
"name": "Leg_part",
"speed": 16.0
} ]

[sub_resource type="Gradient" id=23]
colors = PoolColorArray( 0, 0.25, 1, 1, 0.261719, 0.809662, 1, 1 )

[sub_resource type="GradientTexture" id=24]
gradient = SubResource( 23 )
width = 50

[sub_resource type="Shader" id=29]
code = "shader_type canvas_item;

uniform float color_palette_modifier : hint_range(0.0, 1.0) = 0.0;

uniform int numberOfColors : hint_range(1, 3);
uniform vec4 C1 : hint_color;
uniform vec4 C2 : hint_color;
uniform vec4 C3 : hint_color;


void fragment(){
	vec4 referenceColors[12];
	referenceColors[0] = C1;
	referenceColors[1] = C2;
	referenceColors[2] = C3;

	
	vec4 textureColor = texture(TEXTURE, UV);
	

	COLOR.rgb = mix(textureColor.rgb,referenceColors[int(floor(textureColor.r * float(numberOfColors)))].rgb,color_palette_modifier);
	COLOR.a = textureColor.a;

}"

[sub_resource type="ShaderMaterial" id=63]
resource_local_to_scene = true
shader = SubResource( 29 )
shader_param/color_palette_modifier = 0.0
shader_param/numberOfColors = 3
shader_param/C1 = Color( 0, 0.639216, 0.890196, 1 )
shader_param/C2 = Color( 0.0941176, 0.807843, 1, 1 )
shader_param/C3 = Color( 0.803922, 0.937255, 1, 1 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 112, 126 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 1 )
region = Rect2( 112, 0, 112, 126 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 112, 126 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 112, 126 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 112, 126 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 1 )
region = Rect2( 336, 0, 112, 126 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 66 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 68 ) ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ SubResource( 69 ), SubResource( 70 ) ],
"loop": true,
"name": "shock",
"speed": 24.0
} ]

[sub_resource type="Shader" id=10]
code = "shader_type canvas_item;


uniform float progress : hint_range(0.0,1.0) = 0.0;
uniform sampler2D mask : hint_albedo;

void fragment() {
	float value = texture(mask, UV).r;
	float alpha = step(progress, value);
	COLOR = texture(TEXTURE,UV) * alpha;
}"

[sub_resource type="ShaderMaterial" id=11]
resource_local_to_scene = true
shader = SubResource( 10 )
shader_param/progress = 0.04
shader_param/mask = ExtResource( 3 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 4 )
region = Rect2( 68, 43, 34, 43 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 4 )
region = Rect2( 34, 43, 34, 43 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 4 )
region = Rect2( 0, 43, 34, 43 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 4 )
region = Rect2( 102, 0, 34, 43 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 4 )
region = Rect2( 68, 0, 34, 43 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 4 )
region = Rect2( 34, 0, 34, 43 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 34, 43 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 4 )
region = Rect2( 34, 172, 34, 43 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 4 )
region = Rect2( 68, 43, 34, 43 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 102, 43, 34, 43 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 4 )
region = Rect2( 0, 86, 34, 43 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 4 )
region = Rect2( 34, 86, 34, 43 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 4 )
region = Rect2( 68, 86, 34, 43 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 4 )
region = Rect2( 102, 86, 34, 43 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 4 )
region = Rect2( 0, 129, 34, 43 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 4 )
region = Rect2( 34, 129, 34, 43 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 4 )
region = Rect2( 68, 129, 34, 43 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 4 )
region = Rect2( 102, 129, 34, 43 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 4 )
region = Rect2( 0, 172, 34, 43 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 4 )
region = Rect2( 102, 172, 34, 43 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 34, 43 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 34, 0, 34, 43 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 68, 0, 34, 43 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 102, 0, 34, 43 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 0, 43, 34, 43 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 34, 43, 34, 43 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 68, 43, 34, 43 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": false,
"name": "Close",
"speed": 12.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 64 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 25 ), SubResource( 25 ), SubResource( 25 ), SubResource( 25 ), SubResource( 25 ), SubResource( 25 ), SubResource( 25 ), SubResource( 25 ), SubResource( 25 ), SubResource( 25 ) ],
"loop": true,
"name": "Idle",
"speed": 24.0
}, {
"frames": [ SubResource( 36 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": false,
"name": "Entrance",
"speed": 12.0
} ]

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 5 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 5 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 5 )
region = Rect2( 32, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 5 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 5 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 5 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 5 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 5 )
region = Rect2( 16, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 5 )
region = Rect2( 32, 48, 16, 16 )

[sub_resource type="SpriteFrames" id=59]
animations = [ {
"frames": [ SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 48 ) ],
"loop": true,
"name": "body_part",
"speed": 6.0
}, {
"frames": [ SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 51 ) ],
"loop": true,
"name": "arm_part",
"speed": 6.0
}, {
"frames": [ SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 57 ) ],
"loop": true,
"name": "head_part",
"speed": 6.0
}, {
"frames": [ SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 54 ) ],
"loop": true,
"name": "leg_part",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 32, 14.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 2, 26.5 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 62, 55.5 )

[sub_resource type="Animation" id=46]
resource_name = "Holo_Close"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Dr_light_sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Close" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Polygon2D:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 0.34151, 2.82843, 1 ),
"update": 0,
"values": [ PoolVector2Array( 108, -20, 64, -20, 86, -81 ), PoolVector2Array( 88, -20, 84, -20, 86, -81 ), PoolVector2Array( 88, -80, 84, -80, 86, -81 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "Open"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/progress")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0.04, 0.458, 0.642, 0.804, 0.869333, 0.934667, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Dr_light_sprite:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Polygon2D:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 0.297302, 0.210224, 1 ),
"update": 0,
"values": [ PoolVector2Array( 87, -80, 85, -80, 86, -81 ), PoolVector2Array( 90, -20, 82, -20, 86, -81 ), PoolVector2Array( 108, -20, 64, -20, 86, -81 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Dr_light_sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=71]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Lightning/Center:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, -180 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Lightning/Left:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -121, -155 ) ]
}

[sub_resource type="Animation" id=60]
resource_name = "Transmitting"
length = 5.0
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Particles2D:speed_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 4.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 4.7, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Particles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 4.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2.58333, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "default", "shock", "off" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Lightning/Center:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2.5, 2.58333 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1, -320 ), Vector2( -1, -320 ), Vector2( -1, -180 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Lightning/Center:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.333333, 2.58333, 2.625, 2.66667, 2.70833, 2.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 2, 3, 4 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Lightning:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.0833333, 2.08333, 2.79167 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Lightning/Left:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 2.58333, 2.625, 2.66667, 2.70833, 2.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 2, 3, 4 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Lightning/Left:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 2.5, 2.58333 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -273, -299 ), Vector2( -273, -299 ), Vector2( -121, -155 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Lightning/Right:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 2.5, 2.58333 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 273, -299 ), Vector2( 273, -299 ), Vector2( 121, -155 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Lightning/Right:frame")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 2.58333, 2.625, 2.66667, 2.70833, 2.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("AnimatedSprite:material:shader_param/color_palette_modifier")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.708333, 0.791667, 0.875, 0.958333, 1.04167, 1.125, 1.16667, 1.20833, 1.25, 1.29167, 1.33333, 1.375, 1.41667, 1.45833, 1.5, 1.54167, 1.58333, 1.625, 1.66667, 1.70833, 1.75, 1.79167, 1.83333, 1.875, 1.91667, 1.95833, 2, 2.04167, 2.08333, 2.125, 2.16667, 2.20833, 2.25, 2.29167, 2.33333, 2.375, 2.41667, 2.45833, 2.5, 2.54167, 2.58333, 2.625, 2.66667, 2.70833, 2.75, 2.79167, 2.83333, 2.875, 2.91667, 2.95833, 3, 3.04167, 3.08333, 3.125, 3.20833, 3.29167, 3.375, 3.45833, 3.54167, 3.625, 3.75, 3.875, 4, 4.25, 4.41667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Shine:animation")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 2.562 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Blink" ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Shine:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 2.562 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=37]
resource_name = "Blink"
length = 0.08
loop = true
step = 0.04
tracks/0/type = "value"
tracks/0/path = NodePath("Polygon2D:modulate")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.607843 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Dr_light_sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.533333 ) ]
}

[sub_resource type="CanvasItemMaterial" id=61]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=62]
emission_shape = 2
emission_box_extents = Vector3( 23, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 166.67
orbit_velocity = 0.0
orbit_velocity_random = 0.0
anim_offset = 1.0
anim_offset_random = 1.0

[node name="Item_dr_light_capsule" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Shine" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -40 )
z_index = 1
frames = SubResource( 75 )
animation = "Blink"
playing = true

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( -87, 1 )
color = Color( 1, 1, 1, 0.584314 )
texture = SubResource( 24 )
texture_rotation_degrees = 90.0
polygon = PoolVector2Array( 87, -80, 85, -80, 86, -81 )

[node name="Lightning" type="Node2D" parent="."]
visible = false

[node name="Center" type="Sprite" parent="Lightning"]
position = Vector2( -1, -180 )
texture = ExtResource( 7 )
hframes = 5

[node name="Left" type="Sprite" parent="Lightning"]
position = Vector2( -121, -155 )
texture = ExtResource( 8 )
hframes = 5

[node name="Right" type="Sprite" parent="Lightning"]
position = Vector2( 273, -299 )
texture = ExtResource( 8 )
flip_h = true
hframes = 5

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 63 )
position = Vector2( -1, -50 )
frames = SubResource( 4 )
frame = 3
playing = true

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 11 )
position = Vector2( -1, -50 )
texture = ExtResource( 1 )
hframes = 5
frame = 4
region_rect = Rect2( 10.5368, 72.3967, 199.026, 156.428 )

[node name="Dr_light_sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -41 )
frames = SubResource( 21 )
animation = "Entrance"

[node name="part_icon" type="AnimatedSprite" parent="."]
position = Vector2( -1, -78 )
frames = SubResource( 59 )
animation = "arm_part"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -2.5 )
shape = SubResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -84 )
shape = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
position = Vector2( 0, -48 )
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 4.5 )
shape = SubResource( 6 )

[node name="Cutscene_trigger" type="Area2D" parent="."]
visible = false
position = Vector2( 0, -48 )
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cutscene_trigger"]
position = Vector2( 0, 4.5 )
shape = SubResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Holo_Close = SubResource( 46 )
anims/Open = SubResource( 13 )
anims/RESET = SubResource( 71 )
anims/Transmitting = SubResource( 60 )

[node name="Blink_animplayer" type="AnimationPlayer" parent="."]
anims/Blink = SubResource( 37 )

[node name="Particles2D" type="Particles2D" parent="."]
material = SubResource( 61 )
position = Vector2( 0, -65 )
z_index = 1
emitting = false
amount = 5
lifetime = 0.26
process_material = SubResource( 62 )
texture = ExtResource( 6 )

[node name="ReferenceRect" type="ReferenceRect" parent="."]
margin_left = -392.0
margin_top = -227.0
margin_right = 34.0
margin_bottom = 13.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="Dr_light_sprite" to="." method="_on_Dr_light_sprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Cutscene_trigger" to="." method="_on_Cutscene_trigger_body_entered"]
